// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EditEngine > fuzzy snapshot tests > should successfully apply edit with unicode variants and produce consistent output 1`] = `
{
  "results": [
    {
      "detail": "2 edits applied",
      "file": "test.ts",
      "opResults": [
        {
          "confidence": 1,
          "detail": undefined,
          "matchedText": "const a = "café";",
          "status": "success",
        },
        {
          "confidence": 1,
          "detail": undefined,
          "matchedText": "const b = "résumé";",
          "status": "success",
        },
      ],
      "status": "success",
    },
  ],
}
`;

exports[`EditEngine > fuzzy snapshot tests > should successfully apply edit with unicode variants and produce consistent output 2`] = `
[MockFunction] {
  "calls": [
    [
      "test.ts",
      "const a = "coffee";
const b = "cv";",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`EditEngine > fuzzy snapshot tests > should successfully apply edit with whitespace variants and produce consistent output 1`] = `
{
  "results": [
    {
      "detail": "1 edits applied",
      "file": "test.ts",
      "opResults": [
        {
          "confidence": 1,
          "detail": undefined,
          "matchedText": "function    hello  (  )   {

return   "world"  ;

}",
          "status": "success",
        },
      ],
      "status": "success",
    },
  ],
}
`;

exports[`EditEngine > fuzzy snapshot tests > should successfully apply edit with whitespace variants and produce consistent output 2`] = `
[MockFunction] {
  "calls": [
    [
      "test.ts",
      "function hello() {
  return "parecode";
}",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
